replacing article with section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="informations">
 
-            <article id="contact">
+            <section id="contact">
                 <h2>Contact</h2>
                 <p>Adresse<br>
                     Saint Ouen l'Aumône, France
@@ -31,20 +31,20 @@
                 <p>Email<br>
                     <a href="mailto:bouba.maiga99@gmail.com">bouba.maiga99@gmail.com</a>
                 </p>
-            </article>
+            </section>
 
-            <article id="apropos">
+            <section id="apropos">
                 <h2>A propos de moi</h2>
                 <p>Jeune diplomé Développeur web, je recherche un poste ou une mission dans ce domaine afin d'exploiter mes compétences.</p>
-            </article>
+            </section>
 
-            <article id="loisirs">
+            <section id="loisirs">
                 <h2>Loisirs</h2>
                 <div id="logos">
                     <i class="fas fa-film fa-3x"></i>
                     <i class="fas fa-dumbbell fa-3x"></i>
                 </div>
-            </article>
+            </section>
 
         </div>
         <div class="experiences">
