html and css verification

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="heading">
             <h1><span id="name">Maiga</span> Boubacar <br/> 
-            <p id="job"><span id="trait">Dével</span>oppeur Web freelance </h1></p>
+            <span id="job"><span id="trait">Dével</span>oppeur Web freelance </span></h1>
         </div>
         <div class="informations">
 
