adding media queries for responsive

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 
                 </section>
             
-                <section id="competences">
+                <section id="recommandation">
                 
-                <!-- Compétences -->
+                <!-- Recommandation -->
 
                 <div class="title">
                     <i class="fas fa-pencil-alt fa-2x"></i>
