--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="information">
                             <h3 class="location">Openclassroom</h3>
-                            <i>Développeur Web Junior</i>
+                            <span class="italic">Développeur Web Junior</span>
                             <p class="text">
                                 Formation Développeur Web avec OpenclassRooms. Ce diplôme est de niveau 5 (Bac+2) sur les cadres français et européen des certifications (European Qualifications Framework). 
                                 Les technologies maitrisées en fin de formation sont HTML5, CSS3 et Javascript coté client. 
@@ -79,7 +79,7 @@
                         </div>
                         <div class="information">
                             <h3 class="location">Lycée Edmond Rostand</h3>
-                            <i>Bachelier</i>
+                            <span class="italic">Bachelier</span>
                             <p class="text">
                                 Formation Baccalauréat Economique et Social spécialité Mathématiques au Lycée Edmond Rostand.<br/>
                                 Le Bac ES, à mi-chemin entre le bac L et le bac S, est un bac équilibré qui proposent des enseignements en économie, en histoire-géographie, en mathématiques, en langues... 
@@ -104,7 +104,7 @@
                             <span>2019<br/>Saint ouen l'Aumône</span>
                         </div>
                         <div class="information">
-                            <i>Développement Web</i>
+                            <span class="italic">Développement Web</span>
                             <p class="text">
                                 Prestation de création de site internet vitrine pour restaurateurs
                             </p>
@@ -117,7 +117,7 @@
                             <span>2018<br/>Saint ouen l'Aumône</span>
                         </div>
                         <div class="information">
-                            <i>Mise à jour de curriculum vitae</i>
+                            <span class="italic">Mise à jour de curriculum vitae</span>
                             <p class="text">
                                 Prestation de mise à jour de curriculum vitae auprès de particuliers 
                             </p>
@@ -130,7 +130,7 @@
                             <span>2017<br/>Saint ouen l'Aumône</span>
                         </div>
                         <div class="information">
-                            <i>Installation de décodeur</i>
+                            <span class="italic">Installation de décodeur</span>
                             <p class="text">
                                 Prestation d'installation de décodeur TV auprès de particuliers
                             </p>
