--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
     <title>CV Boubacar MAIGA</title>
+    <meta name="description" content="Site web de présentation de Maiga Boubacar, Développeur Web Freelance">
 </head>
 <body>
 
