--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>CV Boubacar MAIGA</title>
     <meta name="description" content="Site web de présentation de Maiga Boubacar, Développeur Web Freelance">
@@ -16,7 +16,7 @@
 
         <!-- Photo -->
         <div class="profile-picture">
-            <img src="me.jpg" alt="profile picture">
+            <img src="img/me.jpg" alt="profile picture">
         </div>
 
         <!-- Titre -->
