adding 'header tag'

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <!-- Titre -->
-        <div class="heading">
+        <header class="heading">
             <h1><span id="name">Maiga</span> Boubacar <br/> 
             <span id="job"><span id="trait">Dével</span>oppeur Web freelance </span></h1>
-        </div>
+        </header>
 
         <!-- Présentation -->
         <div class="informations">
